Some minor fixes and removing the scrollbar

--- a/resources/assets/sass/pages/_viewer.scss
+++ b/resources/assets/sass/pages/_viewer.scss
@@ -10,6 +10,10 @@
   .primary-view,
   .settings {
     overflow-y: auto;
+
+    &::-webkit-scrollbar{
+      display: none;
+    }
   }
 
   input[type="file"] {
@@ -31,6 +35,10 @@
     z-index: 9999;
     background-color: #212429;
     overflow-y: auto;
+
+    &::-webkit-scrollbar{
+      display: none;
+    }
 
     & .sidebar {
       height: 100vh;
@@ -68,6 +76,10 @@
 
   .viewer-sidebar {
     overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   .content {
